--- a/src/components/Frame/Venue/_venue.scss
+++ b/src/components/Frame/Venue/_venue.scss
@@ -21,7 +21,6 @@
       margin: auto;
       position: absolute;
       right: 0;
-      width: 50%;
     }
 
     @include breakpoint($bp-frame-break-up) {
